--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ database filter=lfs diff=lfs merge=lfs -text
 scene_dense filter=lfs diff=lfs merge=lfs -text
 scene_dense_mesh filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+database.db filter=lfs diff=lfs merge=lfs -text
+project/database.db filter=lfs diff=lfs merge=lfs -text
